fix: コマンドフレームワーク変更に伴う関連処理の修正